edit memesan massal

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="contact-card flex flex-col items-center text-center">
       <i class="fas fa-headset text-4xl text-orange-500 mb-4"></i>
       <h4 class="font-semibold text-xl mb-2">Kontak Cepat</h4>
-      <p class="text-gray-600 mb-4 footer-text">Punya pertanyaan atau ingin memesan?</p>
+      <p class="text-gray-600 mb-4 footer-text">Punya pertanyaan atau ingin memesan secara massal?</p>
       
       <div class="contact-dropdown mb-3">
         <button class="contact-button whatsapp" id="whatsapp-contact-btn">
