--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="contact-card flex flex-col items-center text-center">
       <i class="fas fa-headset text-4xl text-orange-500 mb-4"></i>
       <h4 class="font-semibold text-xl mb-2">Kontak Cepat</h4>
-      <p class="text-gray-600 mb-4 footer-text">Punya pertanyaan atau ingin memesan secara massal?</p>
+      <p class="text-gray-600 mb-4 footer-text">Punya pertanyaan atau ingin memesan?</p>
       
       <div class="contact-dropdown mb-3">
         <button class="contact-button whatsapp" id="whatsapp-contact-btn">
@@ -327,7 +327,10 @@
 <!-- Modal Info Pembayaran -->
 <div id="info-modal" class="modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="info-title" tabindex="-1">
   <h3 id="info-title" class="mb-3"></h3>
-  <div id="info-content" class="mb-4"></div>
+  <div id="info-content" class="mb-4">
+    <!-- QR Code akan ditambahkan di sini oleh JS -->
+    <img id="dana-qr-code" src="" alt="QR Code DANA" class="hidden mx-auto mb-4 w-48 h-48 object-contain rounded-lg">
+  </div>
   <div class="flex gap-3">
     <button id="send-wa" class="flex-1 bg-green-500 text-white py-2 rounded-xl font-semibold hover:bg-green-600">
       <i class="fab fa-whatsapp mr-2"></i>Kirim WA
