Adding picture QR Code

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   <h3 id="info-title" class="mb-3"></h3>
   <div id="info-content" class="mb-4">
     <!-- QR Code akan ditambahkan di sini oleh JS -->
-    <img id="dana-qr-code" src="" alt="QR Code DANA" class="hidden mx-auto mb-4 w-48 h-48 object-contain rounded-lg">
+    <img id="dana-qr-code" src="QR-Dana.jpeg" alt="QR Code DANA" class="hidden mx-auto mb-4 w-48 h-48 object-contain rounded-lg">
   </div>
   <div class="flex gap-3">
     <button id="send-wa" class="flex-1 bg-green-500 text-white py-2 rounded-xl font-semibold hover:bg-green-600">
