--- a/index.html
+++ b/index.html
@@ -394,6 +394,10 @@
   </div>
 </div>
 
+<!-- Tombol Back to Top -->
+<button id="back-to-top" class="back-to-top-btn">
+  <i class="fas fa-arrow-up"></i>
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="main.js"></script>
