--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="style.css" />
+  <!-- Three.js for Dispersion Effect -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -221,6 +223,14 @@
     </button>
   </div>
   <div id="cart-items" class="space-y-4 max-h-64 overflow-y-auto mb-4"></div>
+  
+  <!-- Input Promo Code -->
+  <div class="promo-input-container">
+    <input type="text" id="promo-code-input" placeholder="Masukkan kode promo" />
+    <button id="apply-promo-btn">Terapkan</button>
+  </div>
+  <p id="promo-message" class="promo-applied-text hidden"></p>
+
   <div class="flex justify-between items-center font-semibold text-sm mb-4">
     <span>Total:</span>
     <span id="cart-total">Rp 0</span>
@@ -394,6 +404,36 @@
   </div>
 </div>
 
+<!-- New: Update Notification Modal -->
+<div id="update-modal" class="modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="update-title">
+  <div class="flex justify-between items-center mb-4">
+    <h3 id="update-title" class="mb-0">Pembaruan Terbaru!</h3>
+    <button id="close-update-modal" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200">
+      <i class="fas fa-times text-xl"></i>
+    </button>
+  </div>
+  <div id="update-content" class="space-y-4 max-h-80 overflow-y-auto mb-4">
+    <!-- Content will be dynamically loaded here -->
+  </div>
+  <div id="promo-content" class="bg-orange-100 border-l-4 border-orange-500 text-orange-700 p-4 rounded-lg dark:bg-orange-900 dark:border-orange-400 dark:text-orange-200">
+    <p class="font-semibold mb-2">🎉 Ada Promo Spesial!</p>
+    <p id="promo-text"></p>
+  </div>
+  <!-- Checkbox for "Don't show again for 10 minutes" -->
+  <div class="flex items-center mt-4">
+    <input type="checkbox" id="dont-show-again" class="mr-2">
+    <label for="dont-show-again" class="text-sm text-gray-600 dark:text-gray-300">Jangan tampilkan lagi selama 10 menit</label>
+  </div>
+</div>
+
+<!-- Canvas for Dispersion Effect -->
+<canvas id="dispersion-canvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1500; pointer-events: none; display: none;"></canvas>
+
+
+<!-- Tombol Back to Top -->
+<button id="back-to-top" class="back-to-top-btn">
+  <i class="fas fa-arrow-up"></i>
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="main.js"></script>
