adding fix update announcement and contact card styles

--- a/index.html
+++ b/index.html
@@ -235,6 +235,14 @@
     <span>Total:</span>
     <span id="cart-total">Rp 0</span>
   </div>
+  <!-- New: Promo Price Display -->
+  <div id="promo-price-display" class="flex justify-between items-center font-semibold text-sm mb-4 hidden">
+    <span class="text-gray-500">Harga Asli:</span>
+    <span id="original-total" class="promo-original-price"></span>
+    <span class="text-gray-500">Harga Diskon:</span>
+    <span id="discounted-total" class="promo-discounted-price"></span>
+  </div>
+
   <button id="checkout-btn">Checkout</button>
 </div>
 
